--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
         <div class="muted">© 2025 PUMP Quest</div>
       </div>
       <div class="foot-right">
-        <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a>
+        <a href="https://twitter.com/pumpero" target="_blank" rel="noopener noreferrer">Twitter</a>
         <a href="terms.html">Terms</a>
       </div>
     </div>
   </footer>
 
-  <script src="pump.js" defer></script>
+  <script src="pump1.js" defer></script>
 </body>
 </html>
